force-app/main/default/objects/Disposition__c/Disposition__c.object-meta.xml
<CustomObject>
    <description>Minimal stub for the disposition (sale readiness) of a Property Asset (dispositions module). Created so TestDataFactory compiles; full field set is out of scope for the IR module.</description>
    <label>Disposition</label>
    <nameField>
        <label>Disposition Number</label>
        <type>AutoNumber</type>
        <displayFormat>DISP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Dispositions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>