force-app/main/default/objects/Disposition__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <label>Property Asset</label>
    <description>Optional link to the Property Asset being disposed of. Stub field; nullable.</description>
    <inlineHelpText>Select the property asset this disposition applies to, if applicable.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Dispositions</relationshipLabel>
    <relationshipName>Dispositions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>