force-app/main/default/objects/Disposition__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <description>Current stage of the disposition (e.g. Disposition Readiness). Stored as free Text in this stub so any value set by TestDataFactory is accepted without a restricted picklist.</description>
    <inlineHelpText>Enter the current stage of this disposition.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>