force-app/main/default/objects/Disposition__c/fields/Target_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Sale_Price__c</fullName>
    <label>Target Sale Price</label>
    <description>Target sale price for the property asset being disposed of, in USD. Stub field; nullable.</description>
    <inlineHelpText>Enter the target sale price in USD for this disposition.</inlineHelpText>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>